--- a/assets/main.css
+++ b/assets/main.css
@@ -3,6 +3,7 @@
     --black-color: #000;
     --green-color: #00CC00;
     --red-color: #FF0000;
+    --blue-color: #360ed5;
 }
 
 * {
@@ -110,9 +111,10 @@
 .input_group {
     display: flex;
     flex-direction: column;
-    margin: 12px 0 26px 0;
+    margin: 12px 0;
     width: 80%;
     height: 30px;
+    flex: 1;
 }
 
 .modal_label {
@@ -122,8 +124,8 @@
 
 .modal_input {
     padding: 8px;
-    border: 1px solid var(--black-color);
-    border-radius: 2px;
+    border: 2px solid var(--black-color);
+    border-radius: 4px;
 }
 
 .input_checkbox {
@@ -137,7 +139,7 @@
 }
 
 .form-header {
-    margin-top: 20px;
+    margin: 30px 0 20px 0;
     font-size: 21px;
     font-weight: bold;
 }
@@ -151,6 +153,7 @@
 
 .switch-check {
     font-size: 12px;
+    margin-bottom: 12px;
 }
 
 .close_button {
@@ -165,11 +168,11 @@
     animation: rotate360 .5s linear;
 }
 
-.modal_signIn{
+.modal_signIn {
     position: relative;
     display: flex;
     flex-direction: column;
-    height: 350px;
+    height: 400px;
     width: 400px;
     background-color: var(--white-color);
     justify-content: space-around;
@@ -178,6 +181,27 @@
     border-radius: 3px;
     animation: formComeIn .5s ease;
 }
+
+#signUp_input-confirm,
+#signIn_input-confirm{
+    align-self: center;
+    margin-right: 4px;
+}
+
+.modal_input:focus{
+    outline: none !important;
+    border: 2px solid var(--blue-color) !important;
+}
+
+.form_message{
+    padding-top: 2px;
+    font-size: 13px;
+}
+
+.warning_icon{
+    display: inline-block;
+}
+
 @keyframes borderLinearColor {
     from {
         transform: rotate(0);
